--- a/busmap/style.css
+++ b/busmap/style.css
@@ -9,16 +9,24 @@ body{
 }
 #svgbox{
 	width:100%;
+	top:30px;
+	bottom:150px;
 }
 #infobox{
 	width:100%;
 	top:0;
-	height:40px;
+	height:30px;
 	background-color:#9FF;
 }
 #toolbox{
 	width:100%;
 	bottom:0;
-	height:100px;
+	height:150px;
 	background-color:#FF9;
+}
+#infobox.button{
+	width:100px;
+	height:20px;
+	float:left;
+	background-color:#F00;
 }
