--- a/busmap/style.css
+++ b/busmap/style.css
@@ -3,6 +3,7 @@
 body{
 	margin:0;
 	padding:0;
+	font-family:'Noto Sans',sans-serif;
 }
 .fixedparts{
 	position:absolute;
@@ -24,9 +25,19 @@ body{
 	height:150px;
 	background-color:#FF9;
 }
-#infobox.button{
+#infobox .button{
 	width:100px;
 	height:20px;
 	float:left;
-	background-color:#F00;
+	background-color:#6CF;
+	margin:5px;
+	border-radius:10px;
+	text-align:center;
+	font-weight:bold;
+	font-size:15px;
+	cursor:pointer;
+}
+#infobox .button:hover{
+	background-color:#00F;
+	color:#FFF;
 }
