--- a/busmap/style.css
+++ b/busmap/style.css
@@ -56,10 +56,11 @@ body{
 	margin-right:auto;
 	background-color:#9F9;
 	position:relative;
-	height:200px;
+	/*height:200px;*/
 	top:100px;
 	padding:20px;
 	border-radius:20px;
+	display:none;
 }
 #newbox input[type=text]{
 	width:50px;
@@ -67,4 +68,26 @@ body{
 .notefont{
 	font-size:12px;
 	color:#555;
+}
+.centretext{
+	text-align:center;
+}
+#newbox .buttoncontainer{
+	text-align:center;
+}
+#newbox .buttoncontainer .button{
+	width:100px;
+	height:20px;
+	background-color:#0D0;
+	margin:5px;
+	border-radius:10px;
+	text-align:center;
+	font-weight:bold;
+	font-size:15px;
+	cursor:pointer;
+	display:inline-block;
+}
+#newbox .buttoncontainer .button:hover{
+	background-color:#080;
+	color:#FFF;
 }
