--- a/ship/ship.css
+++ b/ship/ship.css
@@ -5,12 +5,14 @@ html{
 	height:100%;
 	min-height:100%;
 	max-height:100%;
+	padding:0;
 }
 body{
 	margin:0;
 	height:100%;
 	min-height:100%;
 	max-height:100%;
+	padding:0;
 }
 #titlescreen{
 	height:100%;
