--- a/ship/ship.css
+++ b/ship/ship.css
@@ -6,6 +6,7 @@ html{
 	min-height:100%;
 	max-height:100%;
 	padding:0;
+	overflow:hidden;
 }
 body{
 	margin:0;
@@ -13,6 +14,7 @@ body{
 	min-height:100%;
 	max-height:100%;
 	padding:0;
+	overflow:hidden;
 }
 #titlescreen{
 	height:100%;
