--- a/ship/ship.css
+++ b/ship/ship.css
@@ -15,6 +15,8 @@ body{
 	max-height:100%;
 	padding:0;
 	overflow:hidden;
+	-ms-touch-action:none;
+	touch-action:none;
 }
 #titlescreen{
 	height:100%;
