--- a/ship/ship.css
+++ b/ship/ship.css
@@ -37,10 +37,14 @@ body{
 	/*min-height:100%;
 	max-height:100%;*/
 	overflow:auto;
+	display:-webkit-box;
 	display:-webkit-flex;
+	display:-moz-box;
 	display:-moz-flex;
-	display:-ms-flex;
+	display:-ms-flexbox;
 	display:flex;
+	-webkit-box-orient:vertical;
+    -moz-box-orient:vertical;
 	-webkit-flex-direction:column;
 	-moz-flex-direction:column;
 	-ms-flex-direction:column;
@@ -53,13 +57,18 @@ body{
 }
 .buttonbox{
 	background-color:#0F0;
+	-webkit-box-flex:0;
+    -moz-box-flex:0;
 	-webkit-flex:0 0 auto;
 	-moz-flex:0 0 auto;
 	-ms-flex:0 0 auto;
 	flex:0 0 auto;
+	display:block;
 }
 #titlebuttonflex::before{
 	content:"";
+	-webkit-box-flex:0;
+    -moz-box-flex:0;
 	-webkit-flex:1 1 0px;
 	-moz-flex:1 1 0px;
 	-ms-flex:1 1 0px;
@@ -68,6 +77,8 @@ body{
 }
 #titlebuttonflex::after{
 	content:"";
+	-webkit-box-flex:0;
+    -moz-box-flex:0;
 	-webkit-flex:2 2 0px;
 	-moz-flex:2 2 0px;
 	-ms-flex:2 2 0px;
@@ -88,6 +99,11 @@ body{
   	-moz-user-select:none;
   	-ms-user-select:none;
   	user-select:none;
+}
+#nametitle{
+	-moz-border-radius:0;
+	border-radius:0;
+	cursor:default;
 }
 #playtitlebutton{
 	background-color:#F90;
