--- a/ship/ship.css
+++ b/ship/ship.css
@@ -29,13 +29,12 @@ body{
 	height:100%;
 	display:none;
 }
-#titlebuttonflex{
+/* Flexbox in title page */
+.buttonflex{
 	width:400px;
 	margin-left:auto;
 	margin-right:auto;
 	height:100%;
-	/*min-height:100%;
-	max-height:100%;*/
 	overflow:auto;
 	display:-webkit-box;
 	display:-webkit-flex;
@@ -55,8 +54,8 @@ body{
 		width:100%;
 	}
 }
-.buttonbox{
-	background-color:#0F0;
+.buttonflex>div{
+	background-color:#0FF;
 	-webkit-box-flex:0;
     -moz-box-flex:0;
 	-webkit-flex:0 0 auto;
@@ -65,7 +64,7 @@ body{
 	flex:0 0 auto;
 	display:block;
 }
-#titlebuttonflex::before{
+.buttonflex::before{
 	content:"";
 	-webkit-box-flex:0;
     -moz-box-flex:0;
@@ -75,7 +74,7 @@ body{
 	flex:1 1 0px;
 	display:block;
 }
-#titlebuttonflex::after{
+.buttonflex::after{
 	content:"";
 	-webkit-box-flex:0;
     -moz-box-flex:0;
@@ -85,10 +84,32 @@ body{
 	flex:2 2 0px;
 	display:block;
 }
-#settingbuttonbox{
-	display:none;
+/* Inline flexbox for buttona */
+.horizontalholderflex{
+	display:-webkit-box;
+	display:-webkit-flex;
+	display:-moz-box;
+	display:-moz-flex;
+	display:-ms-flexbox;
+	display:flex;
+	-webkit-box-orient:horizontal;
+    -moz-box-orient:horizontal;
+	-webkit-flex-direction:row;
+	-moz-flex-direction:row;
+	-ms-flex-direction:row;
+    flex-direction:row;
+}
+.horizontalholderflex>div{
+	-webkit-box-flex:1;
+    -moz-box-flex:1;
+	-webkit-flex:1 1 200px;
+	-moz-flex:1 1 200px;
+	-ms-flex:1 1 200px;
+	flex:1 1 200px;
+	display:block;
 }
 .titlebutton{
+	box-sizing:border-box;
 	-moz-border-radius:7px;
 	border-radius:7px;
 	font-family:'Gloria Hallelujah',cursive;
@@ -99,6 +120,7 @@ body{
   	-moz-user-select:none;
   	-ms-user-select:none;
   	user-select:none;
+	overflow:hidden;
 }
 #nametitle{
 	-moz-border-radius:0;
@@ -107,17 +129,45 @@ body{
 }
 #playtitlebutton{
 	background-color:#F90;
-	line-height:50px;
-	font-size:20px;
+	line-height:60px;
+	font-size:24px;
 }
 #playtitlebutton:hover{
 	background-color:#A60;
 }
 #instructiontitlebutton{
 	background-color:#FE0;
-	line-height:30px;
-	font-size:16px;
+	line-height:40px;
+	font-size:18px;
 }
 #instructiontitlebutton:hover{
 	background-color:#AA9F00;
+}
+.settingbutton{
+	line-height:40px;
+	font-size:18px;
+}
+.settingbutton:not(:last-child){
+	margin-right:2px;
+}
+.settingbutton:not(:first-child){
+	margin-left:2px;
+}
+/* Additional classes (for overriding properties) */
+.displaynone{
+	display:none;
+}
+.settingbuttonoff{
+	background-color:#999;
+}
+.settingbuttondisabled{
+	position:relative;
+}
+.settingbuttondisabled::before{
+	content:"";
+	position:absolute;
+	width:100%;
+	height:100%;
+	background: repeating-linear-gradient(45deg,rgba(68,68,68,0.6),rgba(68,68,68,0.6) 4px,transparent 4px,transparent 8px);
+	display:block;
 }
