--- a/nimmt/nimmt.css
+++ b/nimmt/nimmt.css
@@ -187,6 +187,7 @@ body{
 	border-radius:8px;
 	background-color:#00F;
 	font-size:12px;
+	color:#0FF;
 }
 .mode-type{
 	height:27px;
@@ -198,6 +199,7 @@ body{
 	font-family:'Gloria Hallelujah',cursive;
 	font-size:14px;
 	cursor:pointer;
+	color:#000;
 }
 /*#titlescreen{
 	height:100%;
