--- a/nimmt/nimmt.css
+++ b/nimmt/nimmt.css
@@ -36,7 +36,7 @@ body{
 }
 
 #maincontent{
-    display:-webkit-box;
+    /*display:-webkit-box;
 	display:-moz-box;
 	display:-ms-flexbox;
 	display:-webkit-flex;
@@ -51,6 +51,8 @@ body{
 	
 	margin:0;
 	height:100%;
+	width:100%;*/
+	height:100%;
 	width:100%;
 }
 @media all and (min-width:800px){
@@ -64,30 +66,32 @@ body{
 	}
 }
 #maincontent>#screen{
-	background-color:#0FF;
-	-webkit-box-flex:3;
+	background-color:#FE9;
+	/*-webkit-box-flex:3;
     -moz-box-flex:3;
 	-webkit-flex:3 3 auto;
 	-moz-flex:3 3 auto;
 	-ms-flex:3 3 auto;
-	flex:3 3 auto;
+	flex:3 3 auto;*/
 	display:-webkit-box;
 	display:-moz-box;
 	display:-ms-flexbox;
 	display:-webkit-flex;
 	display:flex;
+	height:75%;
 }
 #maincontent>#control{
 	background-color:#0FF;
-	-webkit-box-flex:1;
+	/*-webkit-box-flex:1;
     -moz-box-flex:1;
 	-webkit-flex:1 1 auto;
 	-moz-flex:1 1 auto;
 	-ms-flex:1 1 auto;
 	flex:1 1 auto;
-	display:block;
+	display:block;*/
+	height:25%;
 }
-#screencontent{
+.innerflex{
 	display:-webkit-box;
 	display:-moz-box;
 	display:-ms-flexbox;
@@ -103,6 +107,8 @@ body{
 	
 	width:100%;
 	margin:0;
+}
+#screencontent{
 }
 #screencontent>#playarea{
 	background-color:#0F0;
@@ -200,6 +206,43 @@ body{
 	font-size:14px;
 	cursor:pointer;
 	color:#000;
+}
+#lobby>table{
+	width:100%;
+	max-width:600px;
+	margin-left:auto;
+	margin-right:auto;
+	border-collapse:collapse;
+	text-align:center;
+	font-family:'Gloria Hallelujah',cursive;
+	font-size:14px;
+}
+#lobby>table tr{
+	border:3px solid transparent;
+}
+#lobby>table th{
+	background-color:#0F0;
+}
+#lobby>table td{
+	background-color:#0FF;
+}
+#lobby>table tr>th:first-child{
+	width:40%;
+	min-width:40%;
+	max-width:40%;
+}
+.hidden{
+	display:none;
+}
+.sandbox{
+	display:none;
+}
+#player-controls{
+	box-sizing:border-box;
+	display:block;
+	width:100%;
+	height:100%;
+	border:none;
 }
 /*#titlescreen{
 	height:100%;
