--- a/nimmt/nimmt.css
+++ b/nimmt/nimmt.css
@@ -244,6 +244,31 @@ body{
 	height:100%;
 	border:none;
 }
+/* Cards */
+.card{
+	border:2px solid #00F;
+	border-radius:12px;
+	box-sizing:border-box;
+	overflow:hidden;
+	display:block;
+	position:absolute;
+	width:70px;
+	margin-left:35px;
+	left:50%;
+}
+.card>div{
+	/*width:100%;
+	height:100%;*/
+	box-sizing:border-box;
+	border-radius:10px;
+	overflow:hidden;
+	display:block;
+}
+.card>div>svg{
+	width:100%;
+	max-width:60px;
+	display:block;
+}
 /*#titlescreen{
 	height:100%;
 	width:100%;
