--- a/nimmt/nimmt.css
+++ b/nimmt/nimmt.css
@@ -253,7 +253,7 @@ body{
 	display:block;
 	position:absolute;
 	width:70px;
-	margin-left:35px;
+	margin-left:-35px;
 	left:50%;
 }
 .card>div{
@@ -268,6 +268,38 @@ body{
 	width:100%;
 	max-width:60px;
 	display:block;
+}
+.face-value{
+	font-family:'Gloria Hallelujah',cursive;
+	font-size:36px;
+}
+.face-points{
+	font-family:Arial,Helvetica,sans-serif;
+	font-size:10px;
+}
+.face-background{
+	stroke-width:0;
+}
+.face-1>.face-background{
+	fill:rgb(255,255,204);
+}
+.face-2>.face-background{
+	fill:rgb(255,204,153);
+}
+.face-3>.face-background{
+	fill:rgb(255,153,68);
+}
+.face-5>.face-background{
+	fill:rgb(238,0,0);
+}
+.face-8>.face-background{
+	fill:rgb(119,0,0);
+}
+.face-5>.face-value{
+	color:#FFF;
+}
+.face-8>.face-value{
+	color:#FFF;
 }
 /*#titlescreen{
 	height:100%;
