--- a/nimmt/control.css
+++ b/nimmt/control.css
@@ -37,6 +37,12 @@ body{
 body>div{
 	display:block;
 }
+#start{
+	cursor:pointer;
+	font-weight:bold;
+	font-family:'Gloria Hallelujah',cursive;
+	font-size:16px;
+}
 .card{
 	border:3px solid #00F;
 	border-radius:13px;
