--- a/snake/snake.css
+++ b/snake/snake.css
@@ -20,4 +20,22 @@ body{
 }
 #maindiv{
 	margin:0 auto;
+	resize:both;
+	border:2px solid #000;
+	overflow:auto;
+	width:100px;
+	height:100px;
+	max-width:100%;
+	max-height:100%;
+	box-sizing:border-box;
+}
+#tablediv{
+	display:table;
+}
+#sidebar{
+	display:table-cell;
+	overflow:hidden;
+	width:100px;
+	max-width:100px;
+	min-width:100px;
 }
