--- a/snake/snake.css
+++ b/snake/snake.css
@@ -61,6 +61,13 @@ body{
 	padding:5px;
 	position:relative;
 }
+#mainwrapper{
+	display:block;
+	box-sizing:border-box;
+	width:100%;
+	height:100%;
+	padding:5px;
+}
 #sidegroundedbox{
 	position:absolute;
 	left:0;
@@ -89,4 +96,8 @@ body{
 }
 .arrow-right::before{
 	content:"→";
+}
+#svgbox{ /* this will need to be changed */
+	width:100%;
+	height:100%;
 }
