--- a/snake/snake.css
+++ b/snake/snake.css
@@ -22,7 +22,7 @@ body{
 	margin:0 auto;
 	resize:both;
 	display:block;
-	border:2px solid #000;
+	border:none;
 	overflow:hidden;
 	width:100px;
 	height:100px;
@@ -32,6 +32,11 @@ body{
 	min-width:100px;
 	min-height:100px;
 	padding:5px;
+}
+@media only screen and (min-width:1224px){
+	#maindiv{
+		border:2px solid #000;
+	}
 }
 #tablediv{
 	display:table;
@@ -67,6 +72,8 @@ body{
 	width:100%;
 	height:100%;
 	padding:5px;
+	position:relative;
+	/*margin-bottom:-5px;*/
 }
 #sidegroundedbox{
 	position:absolute;
@@ -98,6 +105,5 @@ body{
 	content:"→";
 }
 #svgbox{ /* this will need to be changed */
-	width:100%;
-	height:100%;
+	position:absolute;
 }
