--- a/snake/snake.css
+++ b/snake/snake.css
@@ -24,13 +24,15 @@ body{
 	display:block;
 	border:none;
 	overflow:hidden;
-	width:100px;
+	/*width:100px;
 	height:100px;
 	max-width:100%;
 	max-height:100%;
-	box-sizing:border-box;
 	min-width:100px;
-	min-height:100px;
+	min-height:100px;*/
+	width:100%;
+	height:100%;
+	box-sizing:border-box;
 	padding:5px;
 }
 @media only screen and (min-width:1224px){
