--- a/snake/snake.css
+++ b/snake/snake.css
@@ -110,4 +110,5 @@ body{
 #svgbox{ /* this will need to be changed */
 	position:absolute;
 	/*Debug*/background-color:#0FF;
+	border:2px solid #F00;
 }
