--- a/io/blog.css
+++ b/io/blog.css
@@ -4,7 +4,7 @@ html, body{
     font-family:"CandelaBold",sans-serif;
 }
 
-#blog .title{
+#blog .title, #about .title{
     text-align:center;
     padding:20px 0;
     font-size:28px;
@@ -26,4 +26,15 @@ html, body{
     color:lightgray;
     font-size:14px;
     padding-left:20px;
+}
+
+#about .body{
+    width:100%;
+    max-width:600px;
+    margin:0 auto;
+}
+
+#about a{
+    color:yellow;
+    text-decoration:underline;
 }
