--- a/io/main.css
+++ b/io/main.css
@@ -22,6 +22,7 @@ body{
     padding:0;
     border:0;
     position:absolute;
+    overflow:hidden;
 }
 #welcome-panel{
     z-index:2;
@@ -56,6 +57,13 @@ body{
     padding:0;
     border:0;
 }
+#flex-item-title{
+    flex:0 1 auto;
+    width:100%;
+    height:200px;
+    box-sizing:border-box;
+    text-align:center;
+}
 #flex-item-name{
     flex:0 0 auto;
     width:500px;
@@ -63,6 +71,13 @@ body{
     height:44px;
     padding:0 24px;
     box-sizing:border-box;
+}
+#canvas-clipper{
+    display:inline-block;
+    /*margin:0 auto;*/
+}
+#title-canvas{
+    position:relative;
 }
 #name-textbox{
     width:100%;
