--- a/io/main.css
+++ b/io/main.css
@@ -57,8 +57,13 @@ body{
     padding:0;
     border:0;
 }
+.flex-item-expand{
+    flex:1 1 auto;
+    width:100%;
+    height:200px;
+}
 #flex-item-title{
-    flex:0 1 auto;
+    flex:0 0 auto;
     width:100%;
     height:200px;
     box-sizing:border-box;
