--- a/io/main.css
+++ b/io/main.css
@@ -6,6 +6,7 @@ html{
     /*min-height:100%;*/
     height:100%;
     /*position:relative;*/
+    overflow:hidden;
 }
 body{
     height:100%;
@@ -13,6 +14,7 @@ body{
     padding:0;
     border:0;
     position:relative;
+    overflow:hidden;
 }
 .full-screen-panel{
     display:block;
