--- a/io/main.css
+++ b/io/main.css
@@ -7,6 +7,7 @@ html{
     height:100%;
     /*position:relative;*/
     overflow:hidden;
+    position:fixed;
 }
 body{
     height:100%;
@@ -15,6 +16,7 @@ body{
     border:0;
     position:relative;
     overflow:hidden;
+    position:fixed;
 }
 .full-screen-panel{
     display:block;
