--- a/io/main.css
+++ b/io/main.css
@@ -5,12 +5,14 @@
 html{
     /*min-height:100%;*/
     height:100%;
+    width:100%;
     /*position:relative;*/
     overflow:hidden;
     position:fixed;
 }
 body{
     height:100%;
+    width:100%;
     margin:0;
     padding:0;
     border:0;
