--- a/io/main.css
+++ b/io/main.css
@@ -77,7 +77,7 @@ body{
     box-sizing:border-box;
     text-align:center;
     position:relative;
-    z-index:0;
+    z-index:-1;
 }
 #flex-item-name{
     flex:0 0 auto;
@@ -87,7 +87,21 @@ body{
     padding:0 24px;
     box-sizing:border-box;
     position:relative;
-    z-index:1;
+    z-index:0;
+}
+#flex-item-inputmode{
+    flex:0 0 auto;
+    width:100%;
+    height:20px;
+    line-height:20px;
+    margin-top:20px;
+    box-sizing:border-box;
+    text-align:center;
+    font-family:"CandelaBold",sans-serif;
+    color:rgb(255,255,255);
+    font-size:16px;
+    position:relative;
+    z-index:0;
 }
 #canvas-clipper{
     display:inline-block;
@@ -130,4 +144,13 @@ body{
 #name-textbox::placeholder{ /* standard */
     color:rgb(93,93,93);
     opacity:1;
+}
+#interactionmode{
+    cursor:pointer;
+}
+#interactionmode>span{
+    color:rgb(255,255,128);
+}
+#interactionmode>span:not(.visible){
+    display:none;
 }
