--- a/io/main.css
+++ b/io/main.css
@@ -102,6 +102,12 @@ body{
     font-size:16px;
     position:relative;
     z-index:0;
+    -webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
 }
 #canvas-clipper{
     display:inline-block;
